[gd_scene load_steps=4 format=3 uid="uid://dakupy6hxvo7d"]

[ext_resource type="Script" uid="uid://beoflrnl8yk5n" path="res://scripts/in_level_menu.gd" id="1_jk8a1"]
[ext_resource type="Theme" uid="uid://bk5p2x0n1xjfp" path="res://scenes/main_menu.tres" id="1_wc15a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jk8a1"]
bg_color = Color(0.1504, 0.21432, 0.47, 0.47451)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="InLevelMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jk8a1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -413.5
offset_top = -130.0
offset_right = 413.5
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jk8a1")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -388.0
offset_top = -104.5
offset_right = 388.0
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_wc15a")
action_mode = 0
text = "Fortsetzen"

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_wc15a")
action_mode = 0
text = "Level neu starten"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_wc15a")
action_mode = 0
text = "Level abbrechen"

[connection signal="pressed" from="Panel/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
